
Additions
    [+] CoolDown feature
    [+] New Permission node "suicide.bypass" to bypass the cooldown

Changes
    [*] Made the Firework Harmless to Prevent any Abuse / Exploit

<-!------------------------------------------ v1.4.1 ------------------------------------------!->

Additions
    [+] New Update Checker

Changes
    [*] Minor Code Changes

<-!------------------------------------------ v1.4.2 ------------------------------------------!->

Additions
    [+] Random messages being BroadCasted to players on Player Death
    [+] Ability to set more than one broadcast message

<-!------------------------------------------ v1.4.3 ------------------------------------------!->

Additions
    [+] 1.18.2 Support

Changes
    [*] Minor Code Improvements

<-!------------------------------------------ v1.4.4 ------------------------------------------!->

Additions
    [+] 1.19 Support

Changes
    [*] Minor Code Improvements

<-!------------------------------------------ v1.4.5 ------------------------------------------!->

Additions
    [+] 1.19.3 Support

Changes
    [*] Code Improvement
    [*] If the wanted sound is not registered in the Minecraft version it will display an error in the console indicating it rather than an error spam

Fixes
    [!] suicide.command permission not being checked

<-!------------------------------------------ v1.4.6 ------------------------------------------!->

Additions
    [+] 1.20.2 Support
    [+] Fireworks are now customizable


<-!------------------------------------------ v1.5 ------------------------------------------!->

Additions
    [+] 1.21.4 Support
    [+] Command Aliases

Fixes
    [!] Firework Fades not working properly from the config settings

Changes
    [*] Major Code cleanup and enhancements
    [*] Config values changed to easier understanding
    [*] Bumped Java Version to 17 which will be the least required version to run this plugin